--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "d3_tutorial",
+  "name": "Lesy_jmk",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Ivana Krumlová",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
